<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    tools:context=".detailKlub">


    <View
        android:id="@+id/rectangle_3"
        android:layout_width="413dp"
        android:layout_height="166dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/header2"
        android:layout_width="411dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detail_klub"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/detail_klub"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/panah"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/panah"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bali_united"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/bali_united"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/peringkat_k"
        android:layout_width="102dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/peringkat_k"
        android:textColor="@color/background"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bali_united" />

    <TextView
        android:id="@+id/point2"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/point2"
        android:textColor="@color/background"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/bali_united"
        app:layout_constraintTop_toTopOf="@+id/header2" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id"
        android:textColor="@color/background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point2" />


</androidx.constraintlayout.widget.ConstraintLayout>